# masterd-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  install.sh  masterd-rs.code-workspace  package.json  pr_description.md  pr_description.txt  uv.toml
.cargo/: config.toml
.jules/: bolt.md
.jules/journals/: canonsmith.md
.jules/manifests/canonsmith/: canonsmith-move-manifest-1.json
.jules/plans/canonsmith/: architecture-roadmap.md  concern-map.md
.jules/plans/canonsmith/migrations/: 1-migration-plan.md
.jules/reports/canonsmith/: canonsmith-report-1.md  canonsmith-report-run1.md
apps/masterd-bootstrap/: Cargo.toml
apps/masterd-bootstrap/assets/: default_pipeline.toml
apps/masterd-bootstrap/src/: main.rs
apps/masterd-cli/: review.md
apps/masterd-desktop-tauri/: Cargo.toml  build-shell.sh  dev-shell.sh  package.json  shell-pnpm.sh  tauri.conf.json
apps/masterd-desktop-tauri/src/: main.rs  sidecars.rs  state.rs
apps/masterd-engine-check/: Cargo.toml
apps/masterd-engine-check/src/: main.rs
apps/masterd-ingest/: Cargo.toml
apps/masterd-ingest/src/: main.rs
apps/masterd-midi-player/: Cargo.toml
apps/masterd-midi-player/assets/: sample.mid
apps/masterd-midi-player/src/: main.rs
apps/masterd-shell/: .env.example  README.md  metadata.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo
apps/masterd-shell/app/: globals.css  layout.tsx  page.tsx
apps/masterd-shell/components/: AuditLog.tsx  ChatPanel.tsx  Dashboard.tsx  Documents.tsx  Intake.tsx  Pipeline.tsx  ReviewQueue.tsx  Rules.tsx  Settings.tsx  WelcomeTour.tsx
apps/masterd-shell/contracts/: api.ts
apps/masterd-shell/lib/: mock-bridge.ts  tauri-bridge.ts
apps/masterd-tune/: Cargo.toml
apps/masterd-tune/src/: main.rs
config/: embedding_engine.toml  kernel_manifest.toml  pipeline.toml  rocm-constraints.txt  sidecars.toml
config/amd_profiles/: amd-balanced.toml  amd-rocm-aggressive.toml  safe-direct.toml
config/naming/: default.json
crates/masterd-atom-runtime/: Cargo.toml
crates/masterd-atom-runtime/src/: lib.rs
crates/masterd-chat-engine/: Cargo.toml
crates/masterd-chat-engine/assets/models/instruct/: tokenizer.chat_template
crates/masterd-chat-engine/assets/models/thinking/: tokenizer.chat_template
crates/masterd-chat-engine/assets/prompts/: masterd_personality.txt
crates/masterd-chat-engine/src/: lib.rs  ollama.rs  rag.rs  session.rs  web_search.rs
crates/masterd-core/: Cargo.toml
crates/masterd-core/src/: lib.rs
crates/masterd-core/src/nlp/: classification_learner.rs  entity_extraction.rs  mod.rs  persona.rs  preference_learner.rs
crates/masterd-data/: Cargo.toml
crates/masterd-data/benches/: embeddings_bench.rs
crates/masterd-data/src/: lib.rs
crates/masterd-embed-engine/: Cargo.toml
crates/masterd-embed-engine/src/: lib.rs
crates/masterd-index/: Cargo.toml
crates/masterd-index/src/: bm25.rs  colbert.rs  dedup.rs  lib.rs  local_index.rs  semantic.rs  snapshot.rs
crates/masterd-midi/: Cargo.toml
crates/masterd-midi/src/: detect.rs  fallback.rs  lib.rs
crates/masterd-pipeline/: Cargo.toml
crates/masterd-pipeline/src/: lib.rs  naming.rs  retrieval.rs  runtime.rs  telemetry.rs
crates/masterd-prompt-core/: Cargo.toml
crates/masterd-prompt-core/src/: lib.rs
crates/masterd-runtime-tune/: Cargo.toml
crates/masterd-runtime-tune/src/: lib.rs
crates/masterd-sidecars/: Cargo.toml
crates/masterd-sidecars/src/: lib.rs
crates/masterd-ui-contract/: Cargo.toml
crates/masterd-ui-contract/src/: lib.rs
crates/model2vec-rs/: CITATION.cff
crates/model2vec-rs/.github/workflows/: ci.yaml
crates/model2vec-rs/src/: main.rs
crates/model2vec-rs/tests/: common.rs  test_rust_matches_python.rs
crates/model2vec-rs/tests/fixtures/: embeddings_long.json  embeddings_short.json
crates/rs_rotorquant_codec/: CHANGELOG.md  Cargo.toml  README.md
crates/rs_rotorquant_codec/src/: hybrid.rs  lib.rs  stage1_hip_scaffold.rs
crates/rs_turboquant_codec/: CHANGELOG.md  Cargo.toml  README.md
crates/rs_turboquant_codec/src/: error.rs  ffi.rs  lib.rs  polar.rs  qjl.rs  turbo.rs
crates/rs_turboquant_codec/src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
data/benchmarks/: engine_validation.json  real_benchmarks.json
models/jina-v5-omni-nano/: README.md  config.json  custom_st.py  modeling_jina_embeddings_v5_omni.py  modeling_llava_eurobert_audio.py  modules.json  preprocessor_config.json  processing_llava_eurobert.py  processor_config.json  tokenizer_config.json  vllm_jina_v5_omni.py  vllm_llava_eurobert_audio.py
models/jina-v5-omni-nano/adapters/classification/: adapter_config.json
models/jina-v5-omni-nano/adapters/clustering/: adapter_config.json
models/jina-v5-omni-nano/adapters/retrieval/: adapter_config.json
models/jina-v5-omni-nano/adapters/text-matching/: adapter_config.json
models/jina-v5-omni-small/: README.md  config.json  config_sentence_transformers.json  custom_st.py  modeling_jina_embeddings_v5_omni.py  modules.json  preprocessor_config.json  tokenizer_config.json  video_preprocessor_config.json  vllm_jina_v5_omni.py  vllm_qwen3vl_audio.py
models/jina-v5-omni-small/adapters/classification/: adapter_config.json
models/lfm2-colbert-350m/: LFM2-ColBERT-350M-Q8_0.gguf  sentence_bert_config.json  tokenizer_config.json
models/masterd-identity/: lfm2.5_350m_file_triage_prompt.txt  masterd_personality_prompt.txt
scripts/: bootstrap.py  build-installer-bundles.sh  clone-vendors.sh  download-models.sh  setup-embedding-services.sh  setup-searxng-service.sh  vendor-status.sh
scripts/lib/: install-bootstrap.sh
services/colbert-service/: requirements.txt  server.py
services/jina-service/: requirements.txt  server.py
services/jina-v5-service/: requirements.txt  server.py
services/model2vec-service/: Cargo.toml  start.sh
services/model2vec-service/src/: main.rs
services/qwen3-service/: requirements.txt  server.py
services/searxng-service/: requirements.txt  settings.yml  start.py
(+21 files in other folders)
