[workspace]
resolver = "2"
exclude = [
    "vendor/candle",
    "vendor/tauri",
    "vendor/tokenizers",
]
members = [
    "crates/masterd-chat-engine",
    "crates/masterd-core",
    "crates/masterd-data",
    "crates/masterd-index",
    "crates/masterd-midi",
    "crates/masterd-embed-engine",
    "crates/masterd-pipeline",
    "crates/masterd-prompt-core",
    "crates/masterd-runtime-tune",
    "crates/masterd-sidecars",
    "crates/masterd-ui-contract",
    "vendor/model2vec-rs",
    "apps/masterd-bootstrap",
    "apps/masterd-engine-check",
    "apps/masterd-ingest",
    "apps/masterd-midi-player",
    "apps/masterd-tune",
]
# masterd-desktop-tauri has its own workspace to avoid Tauri vendor workspace
# inheritance conflicts — see apps/masterd-desktop-tauri/Cargo.toml

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Carlos Fundora <sentseven@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
redis = "0.27"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync"] }
lancedb = "0.21.1"
tree-sitter = "0.24.7"
tree-sitter-rust = "0.24.0"
