# masterd-desktop-tauri declares its own workspace so that Tauri vendor path
# dependencies (which use .workspace = true internally) can resolve against the
# Tauri vendor workspace root rather than the MASTERd root workspace.
[workspace]
resolver = "2"

[package]
name = "masterd-desktop-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Carlos Fundora <sentseven@gmail.com>"]

[[bin]]
name = "masterd-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { path = "../../vendor/tauri/crates/tauri-build", features = [] }

[dependencies]
masterd-core     = { path = "../../crates/masterd-core" }
masterd-pipeline = { path = "../../crates/masterd-pipeline" }
masterd-sidecars = { path = "../../crates/masterd-sidecars" }
masterd-runtime-tune = { path = "../../crates/masterd-runtime-tune" }
masterd-chat-engine  = { path = "../../crates/masterd-chat-engine" }
masterd-index        = { path = "../../crates/masterd-index" }

tauri        = { path = "../../vendor/tauri/crates/tauri" }
tauri-macros = { path = "../../vendor/tauri/crates/tauri-macros" }

anyhow    = "1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
tokio     = { version = "1", features = ["full"] }
tracing   = "0.1"
tracing-subscriber = "0.3"
uuid      = { version = "1", features = ["v4"] }
