[package]
name = "masterd-engine-check"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
masterd-chat-engine = { path = "../../crates/masterd-chat-engine" }
masterd-data = { path = "../../crates/masterd-data" }
masterd-embed-engine = { path = "../../crates/masterd-embed-engine" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
