[package]
name = "masterd-chat-engine"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
masterd-pipeline     = { path = "../masterd-pipeline" }
masterd-prompt-core  = { path = "../masterd-prompt-core" }
masterd-index        = { path = "../masterd-index" }

anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { version = "1", features = ["full"] }
reqwest      = { workspace = true }
tracing      = { workspace = true }

# Candle — pure-Rust GGUF inference (app-local vendor paths)
candle-core         = { path = "../../vendor/candle/candle-core",         package = "candle-core" }
candle-nn           = { path = "../../vendor/candle/candle-nn",           package = "candle-nn" }
candle-transformers = { path = "../../vendor/candle/candle-transformers", package = "candle-transformers" }
tokenizers          = { path = "../../vendor/tokenizers", default-features = false, features = ["onig"] }
