[package]
name = "masterd-data"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
redis.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
model2vec-rs = { path = "../model2vec-rs" }
