[package]
name = "masterd-embed-engine"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
masterd-atom-runtime = { path = "../masterd-atom-runtime" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
