[package]
name = "masterd-pipeline"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lancedb.workspace = true
masterd-core = { path = "../masterd-core" }
redis.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
walkdir.workspace = true
