[package]
name = "masterd-runtime-tune"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
masterd-embed-engine = { path = "../masterd-embed-engine" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
