[package]
name = "rs_rotorquant_codec"
version = "0.1.0"
edition = "2021"
description = "RotorQuant KV cache compression codec (PlanarQuant & IsoQuant)"
authors = ["Wave 33B Integration"]
license = "MIT"
publish = false

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
ndarray-stats = "0.5"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
# ndarray-linalg disabled due to openblas build issues


[features]
default = []
pyo3-ffi = ["pyo3"]

[lib]
name = "rs_rotorquant_codec"
crate-type = ["rlib", "cdylib"]
