[package]
name = "model2vec-service"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0"
axum = "0.8"
model2vec-rs = { path = "../../vendor/model2vec-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
